Finished the base of the project

--- a/index.html
+++ b/index.html
@@ -4,23 +4,53 @@
         <head>
             <title>LOOΠΔ FANSITE</title>
             <meta charset="UTF-8">
+            <link rel="stylesheet" href="style.css">
         </head>
                     
         <body>
-            <h1>LOONA FANSITE</h1>
 
-                <p>(commonly stylized as <b>LOONA</b> or <b>LOOΠΔ;</b> Korean: <b>이달의 소녀</b>; RR: <i>Idarui
-            Sonyeo</i>; Japanese: <b>今月の少女</b>, romanized: <i>Kongetsu no Shōjo</i>, lit. '<i>Girl of the
-            Month</i>') is a South Korean girl group formed by <b>Blockberry Creative</b>. The group
-            was introduced to the public through a pre-debut project that began in <b><a href="https://www.youtube.com/watch?v=-FCYE87P5L0">October
-            2016</b></a>, where each of the 12 members were revealed in a periodic fashion by
+            <header>
+                <h1 class="main-title">
+                LOONA FANSITE
+                </h1>
+            </header>
+            <img id="groupPhoto" src="group-photo.jpg" alt="A picture with all 12 names of the group wearing matching outfits in black, white and gold.">           
+            <div class="introduction">
+            <h2 class="secondary-titles">About LOONA</h2>
+
+            <p id="introduction"><strong>Loona</strong> (commonly stylized as <strong>LOONA</strong> or <strong>LOOΠΔ;</strong> Korean: <strong>이달의 소녀</strong>; RR: <strong><em>Idarui
+            Sonyeo</em></strong>; Japanese: <strong>今月の少女</strong>, romanized: <strong><em>Kongetsu no Shōjo</em></strong>, lit. '<strong><em>Girl of the
+            Month</em></strong>') is a South Korean girl group formed by <strong>Blockberry Creative</strong>. The group
+            was introduced to the public through a pre-debut project that began in <strong><a href="https://www.youtube.com/watch?v=-FCYE87P5L0">October
+            2016</strong></a>, where each of the 12 members were revealed in a periodic fashion by
             releasing a promotional single over the following 18 months. 
   
-                    <p>They debuted
+            <p>They debuted
                 as a full ensemble with the extended play, [+ +] (2018), supported by the lead
-                single "<b><a href="https://www.youtube.com/watch?v=AFJPFfnzZ7w">Favorite</a></b>" and the title track "<b><a href="https://www.youtube.com/watch?v=846cjX0ZTrk">Hi High</a></b>".
-                    </p>
+                single "<strong><a href="https://www.youtube.com/watch?v=AFJPFfnzZ7w">Favorite</a></strong>" and the title track "<strong><a href="https://www.youtube.com/watch?v=846cjX0ZTrk">Hi High</a></strong>".
                 </p>
+            </p>
+            </div>
+
+            <div class="members">
+            <h3 class="secondary-titles">Members</h3>
+
+            <ul>
+                <li class="names">Heejin</li>
+                <li class="names">Hyunjin</li>
+                <li class="names">Haseul</li>
+                <li class="names">Yeojin</li>
+                <li class="names">Vivi</li>
+                <li class="names">Kim Lip</li>
+                <li class="names">Jin Soul</li>
+                <li class="names">Choerry</li>
+                <li class="names">Yves</li>
+                <li class="names">Chuu</li>
+                <li class="names">Go Won</li>
+                <li class="names">Olivia Hye</li>
+            </ul>
+            <img src="members.jpg" class="membersImage" alt="Photo of all the members in floral fashion and holding chairs in a field.">
+            </div>
         </body>
                    
     </html>
